errorlogs/1516512135114-torrent2magnet.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
161 INFO: PyInstaller: 3.3.1
162 INFO: Python: 3.4.4
162 INFO: Platform: Windows-XP-5.1.2600-SP3
163 INFO: wrote Z:\p2e\torrent2magnet.spec
170 INFO: UPX is not available.
170 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
180 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516512135114', 'Z:\\p2e']
181 INFO: checking Analysis
181 INFO: Building Analysis because out00-Analysis.toc is non existent
181 INFO: Initializing module dependency graph...
190 INFO: Initializing module graph hooks...
194 INFO: Analyzing base_library.zip ...
7873 INFO: Processing pre-find module path hook   distutils
11737 INFO: running Analysis out00-Analysis.toc
12317 INFO: Caching module hooks...
12332 INFO: Analyzing Z:\p2e\workingdir\1516512135114\torrent2magnet.py

Syntax error in Z:\p2e\workingdir\1516512135114\torrent2magnet.py
  File "Z:\p2e\workingdir\1516512135114\torrent2magnet.py", line 18
     print "Must provide one argument"
                                     ^
 SyntaxError: Missing parentheses in call to 'print'

